<resources>
    <string name="app_name">Taller</string>
    <string name="tvCorre">Correo</string>
    <string name="tvClave">Contraseña</string>
    <string name="btLogin">Ingresar</string>
    <string name="btRegistro">Registrar</string>

    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">RealTime DB</string>
    <string name="tvNumero">Escriba un número</string>
    <string name="btActualiza">Actualizar</string>
    <string name="tvActual">El número actual es:</string>

    <string name="menu_gallery">Storage</string>
    <string name="tvArchivo">Nombre del archivo</string>
    <string name="btDescargar">Descargar</string>
    <string name="btBuscar">Buscar</string>
    <string name="btCarga">Cargar</string>

    <string name="menu_slideshow">SQLite</string>
    <string name="tvId">Id</string>
    <string name="tvNombre">Nombre</string>
    <string name="tvEdad">Edad</string>
    <string name="btInserta">Insertar</string>
    <string name="btConsulta">Consultar</string>
    <string name="btModifica">Modificar</string>
    <string name="btElimina">Eliminar</string>
k
</resources>