<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tvNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNumero"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btActualiza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btActualiza" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvActual"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvNumeroActual"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textAlignment="center" />

</LinearLayout>